--- a/public/views/navbar.ejs
+++ b/public/views/navbar.ejs
@@ -21,7 +21,7 @@
       <i class="far fa-calendar-alt text-[20px]  p-4 text-[#a7a7aa]"></i>
       <i class="fas fa-cog  mt-[600px] text-lg  p-4 text-[#a7a7aa]"></i>
       <div class="relative">
-        <img src="asset/user0.png" class=" shadow-lg w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-lg ">
+        <img class="img shadow-lg w-7 bg-purple-300 pl-[5px] pr-[5px] pt-[6px] pb-[6px] rounded-lg ">
         <div
           class="flex absolute top-[18px] left-[18px] items-center justify-center w-[12px] h-[12px] bg-white rounded-3xl">
           <div class=" w-[8px] h-[8px] bg-green-500 rounded-3xl"></div>
