--- a/public/views/rightContent.ejs
+++ b/public/views/rightContent.ejs
@@ -8,11 +8,11 @@
 </head>
 <body>
   <div class="flex flex-col items-center p-2 ml-2 bg-purple-100 rounded-md">
-    <img src="asset/user1.png" class="mt-5 bg-white rounded-full shadow-md w-36" alt="">
+    <img   class="mt-5 bg-white rounded-full shadow-md cimg w-36" alt="">
 
-    <p class="font-neob text-[20px] mt-3">호리둥절</p>
+    <p class="name font-neob text-[20px] mt-3"> </p>
 
-    <p class="font-neom text-[15px] text-gray-400">2_5_3_1@naver.com</p>
+    <p class="email font-neom text-[15px] text-gray-400"> </p>
    
     <img src="asset/memo9.png" class="mt-7 w-72" alt="">
     <img src="asset/memo5.png" class=" w-72" alt="">
